website/websites/u64q/code/mandelbrot.1.scala.log

Sat, 19 Jun 2010 02:35:29 GMT

MAKE:
mv mandelbrot.scala mandelbrot.scala
mv: `mandelbrot.scala' and `mandelbrot.scala' are the same file
make: [mandelbrot.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.8.0.RC6/bin/scalac mandelbrot.scala
mandelbrot.scala:10: error: not found: type int
  var size: int = 0
            ^
mandelbrot.scala:11: error: not found: type int
  var bytesPerRow: int = 0
                   ^
mandelbrot.scala:12: error: not found: type byte
  var bitmap: Array[byte] = _
                    ^
mandelbrot.scala:13: error: not found: type boolean
  var donerows: Array[boolean] = _
                      ^
mandelbrot.scala:18: error: not found: type int
  def getNextRow: int = synchronized {
                  ^
5 errors found
make: [mandelbrot.scala_run] Error 1 (ignored)
3.16s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.6.0_18/bin/java -server  -Xbootclasspath/a:/usr/local/src/scala-2.8.0.RC6/lib/scala-library.jar mandelbrot 1000

PROGRAM FAILED 


(BINARY) PROGRAM OUTPUT NOT SHOWN

Exception in thread "main" java.lang.NoClassDefFoundError: mandelbrot
Caused by: java.lang.ClassNotFoundException: mandelbrot
	at java.net.URLClassLoader$1.run(URLClassLoader.java:202)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:190)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:307)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:301)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:248)
Could not find the main class: mandelbrot.  Program will exit.
